--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -58,6 +58,9 @@ header nav[aria-expanded='true'] {
 header nav p {
   margin: 0;
   line-height: 1;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
 }
 
 header nav a:any-link {
@@ -262,7 +265,7 @@ header nav .nav-sections ul > li > ul > li {
     position: fixed;
     left: 0;
     width: 99%;
-    top: calc(100% - 77%);
+    top: 105px;
     padding: 16px;
     background-color: var(--light-color);
     white-space: initial;
@@ -284,6 +287,10 @@ header nav .nav-sections ul > li > ul > li {
   header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
     /* padding: 8px 0; */
     padding: 1.25rem;
+  }
+
+  header .nav-brand p{
+    justify-content: end;
   }
 }
 
