--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,13 @@
   --link-hover-color: #1d3ecf;
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback, sans-serif;
-  --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif;
+
+  /* --body-font-family: roboto, roboto-fallback, sans-serif; */
+
+  --body-font-family:'Muli', sans-serif;
+  --heading-font-family:'Muli', sans-serif;
+
+  /* --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif; */
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -155,9 +160,15 @@ button {
 
 /* links */
 a:any-link {
-  color: var(--link-color);
+  /* color: var(--link-color);
   text-decoration: none;
-  word-break: break-word;
+  word-break: break-word; */
+
+  background-color: transparent;
+  color: #000;
+  margin: 0;
+  padding: unset;
+  text-decoration: underline
 }
 
 a:hover {
@@ -227,6 +238,15 @@ main img {
   width: 100%;
 }
 
+.icon-logo{
+  width: 175px;
+  margin-right: 30px;
+}
+
+.icon-search{
+  margin-left: 30px;
+}
+
 /* sections */
 main > .section {
   margin: 40px 0;
@@ -245,6 +265,15 @@ main > .section:first-of-type {
 @media (width >= 900px) {
   main > .section > div {
     padding: 0 32px;
+  }
+}
+
+@media (width <= 800px){
+  main > .section.carousel-container {
+    background-image: url("https://main--projectvenia--siva-jagadeesan.aem.page/image/media_1e80afa69e0a0d75966beb2330654ab7d5fee99db.png?width=2000&format=webply&optimize=medium");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
 }
 
